--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,7 @@ tr {
   margin: 0 1px 0 5px;
 }
 
-.bg-container {
+.bg-container, .prompt-container {
   position: absolute;
   display: grid;
   place-content: center;
@@ -62,7 +62,7 @@ tr {
   background-color: rgba(19, 19, 19, 0.544);
 }
 
-.form-container {
+.form-container, .prompt {
   display: grid;
   place-content: center;
   height: 320px;
